--- a/index.html
+++ b/index.html
@@ -7,16 +7,34 @@
     <title>Meu portfólio</title>
 </head>
 <body>
-    <img src="LesGets24_M3_2416.webp" alt="avatar do adrian" srcset="">
-    <p>Eu sou adrian_</p>
+    <header class="container text-center">
+    <img src="LesGets24_M3_2416.webp" alt="avatar do adrian" class="rounded-circle" width="150" height="150" srcset="">
+    <p class="lead">Eu sou adrian_</p>
     <h1>Sou estudante </h1>
     <p>sou estudante do 2º ano do novo ensino médio </p>
     <p>Minhas habilidades</p>
     <div>
-            <p>scratch</p>
-            <p>p5.js</p>
-            <p>html</p>
-            
-    </div>
+            <p  class="badge text-bg-secondary">scratch</p>
+            <p  class="badge text-bg-secondary">p5.js</p>
+            <p  class="badge text-bg-secondary">html</p>
+            </div>
+        </header>
+        <main class="container">
+           <h2>Meus projetos</h2>
+           <div class="row"> 
+               <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+
+               </div>
+           </div>
+        </main>
 </body>
+
 </html>
