--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
            <h2>Meus projetos</h2>
            <div class="row"> 
                <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card">
+                    <img src="" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <p class="card-text"></p>
+                      <button type="button" class="btn btn-link">link</button>
                     </div>
                   </div>
 
